solve color contrast for the buttons

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
   font-weight: 400;
   font-size: 56px;
   letter-spacing: 0.37px;
-  color: #ff6b00;
+  color: #8a3900;
   margin-top: 130px;
   margin-bottom: 0;
 }
@@ -240,7 +240,7 @@ body {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #fff;
-  background: #ff6b00;
+  background: #8a3900;
 }
 
 .multi-post {
@@ -356,7 +356,7 @@ body {
   height: 48px;
   left: 0;
   top: 338px;
-  background-color: #ff6b00;
+  background-color: #8a3900;
   border: 0;
   font-family: Inter, sans-serif;
   font-style: normal;
@@ -397,7 +397,7 @@ body {
   font-size: 72px;
   line-height: 88px;
   letter-spacing: 0.37px;
-  color: #ff6b00;
+  color: #f55800;
   margin-bottom: 0;
 }
 
@@ -422,7 +422,7 @@ body {
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  background: #ff6b00;
+  background: #8a3900;
   color: #fff;
   margin: 0;
   padding: 12px;
